--- a/segor/src/main/resources/templates/gor/gor.html
+++ b/segor/src/main/resources/templates/gor/gor.html
@@ -4,16 +4,49 @@
 <head>
     <title>GOR List</title>
     <link rel="stylesheet" th:href="@{/css/style.css}" />
+
+    <style>
+        /* Modal Styling */
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 999;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgba(0, 0, 0, 0.4);
+        }
+
+        .modal-content {
+            background-color: #fff;
+            margin: 15% auto;
+            padding: 20px;
+            border: 1px solid #888;
+            width: 40%;
+            border-radius: 8px;
+        }
+
+        .close {
+            color: #aaa;
+            float: right;
+            font-size: 24px;
+            font-weight: bold;
+            cursor: pointer;
+        }
+    </style>
 </head>
 
 <body class="body-gor">
+
     <div th:replace="fragments/navbar :: main-navbar('gor')"></div>
 
     <div class="body-table">
 
         <h2>List of GOR</h2>
         <a th:href="@{/gor/create}" class="button">Tambah GOR</a>
-        
+
         <table class="table">
             <tbody>
                 <tr th:each="gor, iterStat : ${gors}">
@@ -33,8 +66,7 @@
                         <a th:href="@{'/gor/edit/' + ${gor.id}}" class="button-edit">Edit</a>
                         <a th:href="@{'/lapangan/list/gor/' + ${gor.id}}" class="button">Lapangan List</a>
                         <form th:action="@{'/gor/delete/' + ${gor.id}}" method="post" style="display:inline;">
-                            <button type="submit" onclick="return confirm('Are you sure?')"
-                                class="button-delete">Delete</button>
+                            <button type="submit" onclick="return confirm('Are you sure?')" class="button-delete">Delete</button>
                         </form>
                     </td>
                 </tr>
@@ -42,6 +74,27 @@
         </table>
 
     </div>
+
+    <!-- Error Modal -->
+    <div id="errorModal" class="modal" th:if="${errorMessage}">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal()">&times;</span>
+            <p th:text="${errorMessage}"></p>
+        </div>
+    </div>
+
+    <script>
+        function closeModal() {
+            document.getElementById("errorModal").style.display = "none";
+        }
+
+        window.onload = function () {
+            var modal = document.getElementById("errorModal");
+            if (modal) {
+                modal.style.display = "block";
+            }
+        };
+    </script>
 
 </body>
 
