--- a/segor/src/main/resources/templates/fragments/navbar.html
+++ b/segor/src/main/resources/templates/fragments/navbar.html
@@ -14,6 +14,7 @@
             <a class="nav-link" th:href="@{/lapangan/list}"
                 th:classappend="${activePage == 'lapangan'} ? 'active'">Lapangan</a>
             <a class="nav-link" th:href="@{/promo/list}" th:classappend="${activePage == 'promo'} ? 'active'">Promo</a>
+            <a class="nav-link" th:href="@{/transaksi}" th:classappend="${activePage == 'transaksi'} ? 'active'">Lihat Transaksi</a>
         </div>
         <div class="row">
             <a class="nav-link" th:href="@{/logout}" th:classappend="${activePage == 'logout'} ? 'active'">Logout</a>
