moving tambah booking button

--- a/segor/src/main/resources/templates/booking/booking.html
+++ b/segor/src/main/resources/templates/booking/booking.html
@@ -50,7 +50,7 @@
     <div class="body-table">
         <h2>Daftar Booking</h2>
 
-        <a th:href="@{/booking/create}" class="button">Tambah Booking</a>
+        <!-- <a th:href="@{/booking/create}" class="button">Tambah Booking</a> -->
 
         <table class="table-lapangan">
             <thead>
